--- a/src/assets/components.css
+++ b/src/assets/components.css
@@ -7,11 +7,12 @@
     --radius: var(--roundness);
     --font-size: 18px;
     --shadow:var(--shadow-color);
-    padding: 10px 30px;
+    --size: 10px 30px;
+        padding: var(--size);
     border-radius: var(--radius);
     font-size: var(--font-size);
     text-transform: capitalize;
-    font-weight: 500;
+    font-weight: 700;
     background: var(--bg);
     color: var(--color);
     border: 0;
@@ -32,11 +33,15 @@ box-shadow: 0px 0px 0px 0px var(--shadow);
 
 }
 
+.btn-ghost {
+    --bg: #00000000;
+    --color: var(--base-content)
+}
 .btn-primary {
     --color: var(--primary-content);
     --bg: var(--primary);
     --bg-dark: var(--primary-hover);
-    --shadow: hsla(13, 35%, 28%, 0.349);
+    --shadow: hsla(241, 35%, 28%, 0.349);
 }
 .btn-inverse {
     --color: var(--base-content);
@@ -46,4 +51,22 @@ box-shadow: 0px 0px 0px 0px var(--shadow);
 .btn-icon{
     padding: 10px !important;
     
+}
+.btn-lg {
+    --font-size: 24px;
+    --size: 20px 50px;
+}
+
+@media screen and (max-width: 768px) {
+    .btn-lg {
+        --font-size: 20px;
+        --size: 15px 30px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .btn-lg {
+        --font-size: 18px;
+        --size: 10px 20px;
+    }
 }
