--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,6 @@
-.nav-container {
-    padding: 31px;
+.nav-container,
+.nav-container-mobile {
+    padding: 21px;
     display: flex;
     justify-content: flex-between;
     align-items: center;
@@ -9,16 +10,15 @@
 
 
     .logo {
-        font-family: var(--family-logo);
+        font-family: var(--family-head);
         font-size: 24px;
         text-decoration: none !important;
-        letter-spacing: 10px;
         transition: all var(--transition-duration) var(--transition-easing);
         padding: 10px 20px;
         border-radius: var(--roundness, 10px);
-        background: var(--primary);
-        color: var(--primary-content);
-
+        background: var(--primary-content);
+            color: var(--primary);
+            font-weight: 700;
 
 
     }
@@ -57,4 +57,102 @@
     }
 
    
+}
+.nav-container-mobile {
+    display: none;
+}
+
+@media screen and (max-width:800px) {
+    .nav-container {
+        display: none;
+    }
+
+    .nav-container-mobile {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        margin: 0;
+        position: relative;
+        width: 100%;
+
+        .nav-end {
+            display: flex;
+            gap: 0px 1rem;
+        }
+
+        nav.navbar {
+            border-radius: 20px;
+            border-top-right-radius: 0;
+            border-top-left-radius: 0;
+            position: absolute;
+            width: 100%;
+            top: 0px;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            overflow: hidden;
+            height: min-content;
+            padding: 2rem;
+            transform: translateY(-1200px);
+
+            .nav-head {
+                margin-bottom: 1rem;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                button {
+                    margin-left: auto;
+                    background: transparent;
+                    color: var(--base-content);
+                    border: 1px solid var(--base-content-lighter);
+                }
+            }
+
+            .nav-footer {
+                margin-top: 3rem;
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                p {
+                    font-size: 16px;
+                    color: var(--base-content-lighter);
+                }
+            }
+
+            ul {
+                flex-direction: column;
+                gap: 1rem 0px;
+                width: 100%;
+                padding: 0;
+
+                li {
+                    justify-content: flex-start;
+                    padding: 7.5px 15px;
+                    gap: 0 1rem;
+                    flex-basis: 100%;
+                    border-radius: var(--roundness);
+
+                    &.active {
+                        background-color: var(--primary);
+                        color: var(--primary-content);
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+@media screen and (max-width:400px) {
+    .nav-container-mobile {
+
+        .logo {
+            font-size: 18px !important;
+        }
+
+
+
+    }
 }
