--- a/src/assets/theme.css
+++ b/src/assets/theme.css
@@ -1,15 +1,15 @@
 :root {
   
     /* *general */
-    --base-100: #fafafa;
-    --base-200: #f5f5f5;
+    --base-100: #fff;
+        --base-200: #f5f5f5;
     --base-300: #e5e5e5;
-    --base-content: #171717;
-    --base-content-lighter: #404040;
+    --base-content: #12141b;
+        --base-content-lighter: #404040ec;
     --roundness: 9999px;
     --border-color: #262626;
     --shadow-color: rgba(227, 227, 227, 0.89);
-    --family-base: Supreme, Inter,
+    --family-head: 'General Sans', Inter,
         -apple-system,
         BlinkMacSystemFont,
         'Segoe UI',
@@ -22,7 +22,7 @@
         'Helvetica Neue',
         sans-serif;
     ;
-    --family-logo: Tanker, Supreme, Inter,
+    --family-body: Chillax, Supreme, Inter,
         -apple-system,
         BlinkMacSystemFont,
         'Segoe UI',
@@ -40,9 +40,9 @@
     --transition-easing: cubic-bezier(0.23, 1, 0.320, 1);
 
     /* * primary */
-    --primary: #774537;
-    --primary-content: #f9f5f1;
-    --primary-hover: #3b241d;
+    --primary: #7662a6;
+        --primary-content: #ece6fa;
+        --primary-hover: #6447a7;
 
     /* * secondary */
     --secondary: #316d70;
@@ -67,9 +67,9 @@
     --shadow-color: rgba(224, 224, 224, 0.199);
 
         /* * primary */
-        --primary: #774537;
-        --primary-content: #f9f5f1;
-        --primary-hover: #60392e;
+        --primary: #7662a6;
+            --primary-content: #ece6fa;
+            --primary-hover: #6447a7;
 
         /* * secondary */
         --secondary: #316d70;
@@ -81,3 +81,4 @@
         --success-content: #d1fae5;
         --success-hover: #065f46;
     }
+
